[package]
name = "svm-nakamoto-payment-channels"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_channel"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "solana-transaction-introspection/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
solana-transaction-introspection = { version = "0.4.1", features = ["anchor"] }
solana-program = "=2.0.8"
